0.02
 - Fix test code.

0.01 2024-04-11T15:38:58+02:00
 - First version.