@@ -4,7 +4,7 @@ use warnings;
 use English;
 use Error::Pure::Utils qw(clean);
 use Mo::utils::Country qw(check_country_3166_1_alpha_2);
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
@@ -13,6 +13,13 @@ my $self = {
 };
 my $ret = check_country_3166_1_alpha_2($self, 'key');
 is($ret, undef, 'Right country is present (cz).');
+
+# Test.
+$self = {
+	'key' => 'CZ',
+};
+$ret = check_country_3166_1_alpha_2($self, 'key');
+is($ret, undef, 'Right country is present (CZ).');
 
 # Test.
 $self = {
