@@ -1,4 +1,5 @@
 0.02
+ - Add support for upper case codes.
  - Fix test code.
 
 0.01 2024-04-11T15:38:58+02:00
